<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/home_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_scrollview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Status"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_3"
                    app:layout_constraintBottom_toTopOf="@+id/app_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/app_logo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="72dp"
                    android:src="@drawable/truck_logo_finished"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/first_divider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/margin_3"
                    android:background="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/app_logo" />

                <TextView
                    android:id="@+id/profile_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_3"
                    android:layout_marginTop="20dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/average_speed"
                    android:textColor="@color/green"
                    android:textSize="@dimen/text_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/app_logo" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/speed"
                    android:textColor="@color/green"
                    android:textSize="@dimen/text_2"
                    app:layout_constraintBottom_toTopOf="@+id/speed_indicator"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_title"
                    app:layout_constraintVertical_bias="0.22" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/nicespeed"
                    android:textColor="@color/green"
                    android:textSize="@dimen/text_2"
                    app:layout_constraintBottom_toTopOf="@+id/speed_indicator"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/speed_indicator"
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_marginHorizontal="@dimen/margin_7"
                    android:layout_marginTop="96dp"
                    android:value="50"
                    app:indicatorColor="@color/green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_title"
                    app:trackColor="@color/black"
                    app:trackCornerRadius="5dp"
                    app:trackThickness="10dp" />

                <View
                    android:id="@+id/second_divider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/update_truck_locale_button" />


                <Button
                    android:id="@+id/update_truck_locale_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/update"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/speed_indicator" />


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GasTankStatus"
                    android:textSize="@dimen/text_3"
                    app:layout_constraintBottom_toTopOf="@+id/speed_indicator2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/second_divider"
                    app:layout_constraintVertical_bias="0.229" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GasTankPercentage"
                    android:textSize="@dimen/text_3"
                    app:layout_constraintBottom_toTopOf="@+id/speed_indicator2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintVertical_bias="0.454" />

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/speed_indicator2"
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_marginHorizontal="@dimen/margin_7"
                    android:layout_marginTop="148dp"
                    android:value="50"
                    app:indicatorColor="@color/green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/second_divider"
                    app:trackColor="@color/black"
                    app:trackCornerRadius="5dp"
                    app:trackThickness="10dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/speed_indicator2" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
